fix cut off content

--- a/src/Components/Pages/Results/Results.scss
+++ b/src/Components/Pages/Results/Results.scss
@@ -214,6 +214,7 @@ $eligibilityTablePaddingH: 36px;
     }
 
     .content-box {
+      margin-top: unset;
       border: unset;
       .accordion__chevron {
         display: none;
